objects/Field_Activity_Log__c/Field_Activity_Log__c.object-meta.xml
<CustomObject>
    <label>Field Activity Log</label>
    <nameField>
        <displayFormat>FAL-{000000000}</displayFormat>
        <label>Entry No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Activity Log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>