objects/Field_Activity_Log__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Field Activity Log</relationshipLabel>
    <relationshipName>Field_Activity_Log</relationshipName>
    <type>Lookup</type>
</CustomField>