objects/Field_Activity_Log__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Type</label>
    <referenceTo>Resource_Type__c</referenceTo>
    <relationshipLabel>Field Activity Log</relationshipLabel>
    <relationshipName>Field_Activity_Log</relationshipName>
    <type>Lookup</type>
</CustomField>