objects/Field_Activity_Log__c/fields/T_M_Line__c.field-meta.xml
<CustomField>
    <fullName>T_M_Line__c</fullName>
    <label>T&amp;M Line</label>
    <referenceTo>TM_Line__c</referenceTo>
    <relationshipLabel>Field Activity Log</relationshipLabel>
    <relationshipName>Field_Activity_Log</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>